fix code wrapping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -139,7 +139,6 @@ code {
 }
 
 pre {
-    width: 100%;
     height: 100%;
     display: block;
     overflow-x: auto;
@@ -147,10 +146,10 @@ pre {
     padding: 0.5em 15px;
 
     > code {
+        word-wrap: break-word;
         border: 0;
         padding-right: 0;
         padding-left: 0;
-        width: 100%;
         height: 100%;
         display: block;
         background-color: transparent;
